--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Научиться учиться</title>
-  <link rel="stylesheet" href="page/index.css">
+  <link rel="stylesheet" href="pages/index.css">
 </head>
 <body>
   <div class="page">
@@ -12,28 +12,28 @@
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__link link-opacity">Узнать &#8594;</a></p>
+        <a href="#" class="header__link link">Узнать &#8594;</a></p>
       <div class="header__square-pic rotation"></div>
       <img src="./images/header-image.png" alt="Фрагмент картины Опять двойка" class="header__main-illustration">
     </header>
     <main class="content">
-      <section class="description content__description">
-        <div class="two-columns">
-          <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
+      <section class="description content__description" aria-label="Главные проблемы в обучении">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал.
               Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но
               часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-            <p class="two-columns__span-accant"><span class="span-accant">Вывод: </span>учиться тоже нужно уметь,
+            <p class="two-columns__paragraph"><span class="two-columns__span-accant">Вывод: </span>учиться тоже нужно уметь,
               но почему-то этому мало где учат. Что с этим делать?</p>
             <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению,
               сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="techniques content__techniques">
         <h2 class="section-title">Техники обучения</h2>
-        <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
           <li class="cards__item">
             <img src="./images/cards-attention.png" alt="Фото книги в руках человека" class="cards__image">
@@ -64,17 +64,21 @@
       </section>
       <section class="video content__video">
         <h2 class="section-title">Видео нa TED</h2>
-        <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
-        <div class="video__iframes">
-          <iframe id="ytplayer1" class="video__iframe"
-          src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
-          <iframe id="ytplayer2" class="video__iframe"
-          src="https://www.youtube.com/embed/0u3bccaRmmg" allowfullscreen></iframe>
-        </div>
+        <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
+        <ul class="video__iframes">
+          <li>
+            <iframe id="ytplayer1" class="video__iframe"
+            src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
+          </li>
+          <li>
+            <iframe id="ytplayer2" class="video__iframe"
+            src="https://www.youtube.com/embed/0u3bccaRmmg" allowfullscreen></iframe>
+          </li>
+        </ul>
       </section>
-      <section class="oakley content__oakley">
-        <div class="two-columns">
-          <h3 class="two-columns__brief">История Барбары Оакли.</h3>
+      <section class="oakley content__oakley" aria-label="История Барбары Оакли">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием,
               причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её
@@ -82,17 +86,17 @@
               подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже,
               чем у тех, кому всё ясно с первого взгляда.</p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть</h3>
-        <a href="#" class="feynman__link link-opacity">Подробнее &#8594;</a>
-        <img src="./images/feynman.png" alt="Портрет Феймана" class="feynman__illustration">
+        <p class="feynman__subtitle">Выучить и не забыть</p>
+        <a href="#" class="feynman__link link">Подробнее &#8594;</a>
+        <div class="feynman__illustration"></div>
       </section>
       <section class="digits content__digits">
         <h2 class="section-title section-title_theme_white">Цифры и факты</h2>
-        <h3 class="section-subtitle section-subtitle_theme_white">Про учёбу и мозг</h3>
+        <p class="section-subtitle section-subtitle_theme_white">Про учёбу и мозг</p>
         <ul class="table table_theme_white">
           <li class="table__cell table__cell_theme_white">
             <h3 class="table__heading table__heading_theme_white">86 миллиардов</h3>
@@ -132,22 +136,22 @@
       </section>
       <section class="khan">
         <div class="khan__container">
-          <h3 class="khan__author">Салман Хан</h3>
+          <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
             Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить
-            навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+            навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img src="./images/khan-book.jpg" alt="Обложка книги Саламана Хана" class="khan__book-pic">
-            <a href="#" class="khan__buy-link link-opacity">Купить книгу &#8594;</a>
+            <a href="#" class="khan__buy-link link">Купить книгу &#8594;</a>
           </div>
         </div>
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
-        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
@@ -190,49 +194,49 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <img src="./images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle rotation">
+        <div class="kaufman__triangle rotation"></div>
       </section>
-      <nav class="resources content__resources">
+      <section class="resources content__resources">
         <h2 class="section-title">Полезные ресурсы</h2>
-        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
-        <div class="resources__logo-zone">
-          <a href="#" class="resources__link link-opacity">
-            <img src="./images/resources-arzamas.svg" alt="Логотип Arzamas" class="resources__logo">
-          </a>
-          <a href="#" class="resources__link link-opacity">
-            <img src="./images/resources-n1.svg" alt="Логотип N+1" class="resources__logo">
-          </a>
-          <a href="#" class="resources__link link-opacity">
-            <img src="./images/resources-strelka.svg" alt="Логотип Strelka" class="resources__logo">
-          </a>
-          <a href="#" class="resources__link link-opacity">
-            <img src="./images/resources-polka.svg" alt="Логотип Полка" class="resources__logo">
-          </a>
-        </div>
-      </nav>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <ul class="resources__logo-zone">
+          <li><a href="#" class="resources__link link">
+            <img src="./images/resources-arzamas.svg" alt="Логотип Arzamas" class="resources__logo"></a>
+          </li>
+          <li><a href="#" class="resources__link link">
+              <img src="./images/resources-n1.svg" alt="Логотип N+1" class="resources__logo"></a>
+          </li>
+          <li><a href="#" class="resources__link link">
+              <img src="./images/resources-strelka.svg" alt="Логотип Strelka" class="resources__logo"></a>
+          </li>
+          <li><a href="#" class="resources__link link">
+              <img src="./images/resources-polka.svg" alt="Логотип Полка" class="resources__logo"></a>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
-          <div class="footer__author">&copy; Виктор Абанькин</div>
+          <p class="footer__author">&copy; Ирина Жуковская</p>
         </div>
-        <div class="footer__column footer__column_content_info">
-          <h3 class="footer__column-heading">О Практикуме</h3>
-          <div class="footer__column-links">
-            <a href="#" class="footer__column-link link-opacity">Главная</a>
-            <a href="#" class="footer__column-link link-opacity">Концепция</a>
-            <a href="#" class="footer__column-link link-opacity">Наставники</a>
-          </div>
-        </div>
-        <div class="footer__column footer__column_content_social">
-          <h3 class="footer__column-heading">Соцсети</h3>
-          <div class="footer__column-links">
-            <a href="#" class="footer__column-link link-opacity"><img src="./images/youtube-icon.svg" alt="Логотип YouTube" class="footer__social-icon">YouTube</a>
-            <a href="#" class="footer__column-link link-opacity"><img src="./images/vk_color_white.svg" alt="Логотип ВКонтакте" class="footer__social-icon">ВКонтакте</a>
-            <a href="#" class="footer__column-link link-opacity"><img src="./images/tiktok-icon.svg" alt="Логотип TikTok" class="footer__social-icon">TikTok</a>
-          </div>
-        </div>
+        <nav class="footer__column footer__column_content_info">
+          <h2 class="footer__column-heading">О Практикуме</h2>
+          <ul class="footer__column-links">
+            <li><a href="#" class="footer__column-link link">Главная</a></li>
+            <li><a href="#" class="footer__column-link link">Концепция</a></li>
+            <li><a href="#" class="footer__column-link link">Наставники</a></li>
+          </ul>
+        </nav>
+        <nav class="footer__column footer__column_content_social">
+          <h2 class="footer__column-heading">Соцсети</h2>
+          <ul class="footer__column-links">
+            <li><a href="#" class="footer__column-link link"><img src="./images/youtube-icon.svg" alt="Логотип YouTube" class="footer__social-icon">YouTube</a></li>
+            <li><a href="#" class="footer__column-link link"><img src="./images/vk_color_white.svg" alt="Логотип ВКонтакте" class="footer__social-icon">ВКонтакте</a></li>
+            <li><a href="#" class="footer__column-link link"><img src="./images/tiktok-icon.svg" alt="Логотип TikTok" class="footer__social-icon">TikTok</a></li>
+          </ul>
+        </nav>
       </div>
     </footer>
   </div>
